open graph test2

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@
 /nbdist/
 /.nb-gradle/
 
-src/main/resources/static/*
+src/main/resources/static/js
+src/main/resources/static/css
 
 node_modules/*
 
