--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^1.0.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
+    "normalize.css": "^8.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.22.0",
