--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ node {
 }
 
 task webpack(type: NodeTask, dependsOn: 'npmInstall') {
+    args = ["-p"]
     script = project.file('node_modules/.bin/webpack')
 }
 
