--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "url": "https://github.com/myks790/MyHome.git"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
+    "i": "^0.3.6",
+    "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-render-html": "^0.6.0",
