--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.mariadb.jdbc:mariadb-java-client:2.3.0')
-
+    implementation('ch.qos.logback:logback-core:1.2.3')
+    implementation('ch.qos.logback:logback-classic:1.2.3')
 }
 
 node {
