--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation('org.mariadb.jdbc:mariadb-java-client:2.3.0')
     implementation('ch.qos.logback:logback-core:1.2.3')
     implementation('ch.qos.logback:logback-classic:1.2.3')
+    implementation('org.springframework.boot:spring-boot-starter-cache')
+    implementation('org.ehcache:ehcache:3.6.1')
+    implementation('javax.cache:cache-api:1.1.0')
 }
 
 node {
