--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/myks790/MyHome.git"
+    "url": "https://github.com/myks790/my-home.git"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
