admin, public 으로 react app 분리 및 webpack 설정

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,7 @@
 /nbdist/
 /.nb-gradle/
 
-src/main/resources/static/js
-src/main/resources/static/css
+src/main/resources/static/**
 
 node_modules/*
 
