--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath "com.moowork.gradle:gradle-node-plugin:1.2.0"
+        classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.13.0')
     }
 }
 
@@ -19,7 +20,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: "com.moowork.node"
 
-group = 'com.myks790'
+group = 'myks790'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -61,4 +62,23 @@ bootRun {
 
 test {
     exclude '**/*'
+}
+
+
+apply plugin: 'com.palantir.docker'
+
+bootJar {
+    baseName = 'my-home-docker'
+    version =  '0.0.1'
+}
+
+task unpack(type: Copy) {
+    dependsOn bootJar
+    from(zipTree(tasks.bootJar.outputs.files.singleFile))
+    into("build/dependency")
+}
+docker {
+    name "${project.group}/${bootJar.baseName}"
+    copySpec.from(tasks.unpack.outputs).into("dependency")
+    buildArgs(['DEPENDENCY': "dependency"])
 }
