--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
-    "bootstrap": "^3.3.7",
     "jquery": "^2.2.4",
     "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-render-html": "^0.6.0",
-    "react-router-dom": "^4.3.1",
-    "react-summernote": "^2.0.0"
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
